<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.inscripts.cometchatsample.MainActivity">

    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:src="@drawable/cometchat_logo" />

    <ProgressBar
        android:id="@+id/pb_loading"
        style="@style/Base.Widget.AppCompat.ProgressBar.Horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:indeterminate="true"
        android:visibility="gone" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/btnInitialize"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:layout_marginEnd="15dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="40dp"
            android:text="@string/text_initialize_chat" />

        <Button
            android:id="@+id/btnLaunchChat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/ll_login"
            android:layout_margin="20dp"
            android:enabled="false"
            android:text="@string/text_launch_chat" />

        <Button
            android:id="@+id/btnCreateUser"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/btnLaunchChat"
            android:layout_margin="15dp"
            android:enabled="true"
            android:text="@string/text_create_user" />

        <LinearLayout
            android:id="@+id/ll_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/btnInitialize"
            android:layout_centerInParent="true"
            android:layout_margin="20dp"
            android:orientation="horizontal"
            android:weightSum="1">

            <Button
                android:id="@+id/btnLoginSuperHero1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.45"
                android:enabled="false"
                android:text="@string/text_login_superhero1" />

            <Button
                android:id="@+id/btnLoginSuperHero2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.45"
                android:enabled="false"
                android:text="@string/text_login_superhero2" />

            <View
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.1" />

        </LinearLayout>

    </RelativeLayout>

</LinearLayout>
